# pong

./: .gitignore  BAKMAKEFILE  CMakeLists.txt  main.c  main.h
ball/: Ball.c  Ball.h
game/: GameLogic.c  GameLogic.h  GameLoop.c  GameLoop.h  Input.c  Input.h
network/: NetworkClient.c  NetworkClient.h
paddle/: Paddle.c  Paddle.h
utils/: MathUtils.c  MathUtils.h
